# ElementUI

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json
cmake/: FindQt.cmake  Function.cmake  Version.cmake
sample/: CMakeLists.txt  main.cpp  sample.qrc
sample/qml/: App.qml
src/: Application.cpp  CMakeLists.txt  QtConfig.cmake.in
src/Qt6/Controls/: EleWindow.qml
src/core/: AbstractWindowContext.cpp  AbstractWindowContext.h  qwindowkit_windows.h  qwkglobal_p.h  windowagentbase.cpp  windowagentbase.h  windowagentbase_p.h  windowitemdelegate_p.h
src/core/contexts/: abstractwindowcontext_p.h  cocoawindowcontext_p.h  qtwindowcontext_p.h  win32windowcontext.cpp  win32windowcontext_p.h
src/core/kernel/: nativeeventfilter_p.h  sharedeventfilter_p.h  winidchangeeventfilter_p.h
src/core/shared/: qwkwindowsextra_p.h  systemwindow_p.h  windows10borderhandler_p.h
src/core/style/: styleagent.h  styleagent_p.h  styleagent_win.cpp
src/include/: Application.h  stdafx.h
src/quick/: QuickWindowAgent.cpp  QuickWindowAgent.h  quickitemdelegate_p.h  quickwindowagent.h  quickwindowagent_p.h  quickwindowagent_win.cpp  qwkquickglobal.cpp
src/widget/: WidgetWindowAgent.cpp  WidgetWindowAgent.h
